--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,31 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "codeflow-cli"
-version = "0.1.2"
-description = "Interactive CLI agent for Groq API with chat, model selection, and file diff capabilities"
-authors = [{name = "Groq CLI Team"}]
+version = "0.1.3"
+description = "Advanced AI coding assistant with Cursor AI-style agentic capabilities, semantic search, and intelligent code operations"
+authors = [{name = "TM NABEEL", email = "tmnabeel30@example.com"}]
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "MIT" }
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "Topic :: Software Development :: Debuggers",
+    "Topic :: Software Development :: Quality Assurance",
+    "Topic :: Software Development :: Code Generators",
+    "Topic :: Text Processing :: Linguistic",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Environment :: Console",
+    "Operating System :: OS Independent",
+]
+keywords = [
+    "ai", "coding", "assistant", "cursor", "agentic", "semantic-search", 
+    "code-analysis", "terminal", "cli", "groq", "llm", "developer-tools"
 ]
 dependencies = [
     "groq>=0.4.0",
